--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ keywords = ["web3", "sdk", "aptos", "blockchain"]
 [tool.poetry.dependencies]
 ecdsa = "0.18.0"
 python-graphql-client = "^0.4.3"
-httpx = "^0.27.0"
+httpx = {extras = ["http2"], version = "^0.28.1"}
 PyNaCl = "^1.5.0"
 python = ">=3.8.1"
 tomli = "^2.0.1"
