--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,23 @@
 [tool.poetry]
-name = "aptos-sdk"
-version = "0.9.1"
-description = "Aptos SDK"
-authors = ["Aptos Labs <opensource@aptoslabs.com>"]
+name = "supra-sdk"
+version = "0.1.0"
+description = "Supra SDK"
+authors = ["Supra Labs <opensource@supralabs.com>"]
 license = "Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/aptos-labs/aptos-core"
-homepage = "https://github.com/aptos-labs/aptos-core/tree/main/ecosystem/python/sdk"
-keywords = ["web3", "sdk", "aptos", "blockchain"]
+repository = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
+homepage = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
+keywords = ["supra", "supra-l1", "supra-move", "move"]
 
 [tool.setuptools.package-data]
-"aptos-sdk" = ["py.typed"]
+"supra-sdk" = ["py.typed"]
 
 [tool.poetry.dependencies]
 ecdsa = "0.18.0"
 python-graphql-client = "^0.4.3"
-httpx = "^0.27.0"
+httpx = { extras = ["http2"], version = "^0.28.1" }
 PyNaCl = "^1.5.0"
-python = ">=3.8.1"
+python = ">=3.12.0"
 tomli = "^2.0.1"
 typing-extensions = "^4.4.0"
 behave = "^1.2.6"
