--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,37 @@
-[tool.poetry]
+[project]
 name = "supra-sdk"
 version = "0.1.0"
 description = "Supra SDK"
-authors = ["Supra Labs"]
+requires-python = ">=3.12"
 license = "Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
-homepage = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
 keywords = ["supra", "supra-l1", "supra-move", "move"]
+dependencies = [
+    "httpx[http2]>=0.28.1,<0.29.0",
+    "PyNaCl>=1.5.0,<2.0.0",
+    "typing-extensions>=4.4.0,<5.0.0",
+    "behave>=1.2.6,<2.0.0",
+    "types-six>=1.16.21.20240513,<2.0.0",
+]
 
-[tool.setuptools.package-data]
-"supra-sdk" = ["py.typed"]
+[project.urls]
+Homepage = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
+Repository = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
 
-[tool.poetry.dependencies]
-ecdsa = "0.18.0"
-python-graphql-client = "^0.4.3"
-httpx = { extras = ["http2"], version = "^0.28.1" }
-PyNaCl = "^1.5.0"
-python = ">=3.12.0"
-tomli = "^2.0.1"
-typing-extensions = "^4.4.0"
-behave = "^1.2.6"
-types-six = "^1.16.21.20240513"
+[tool.ruff]
+line-length = 88
 
-[tool.poetry.dev-dependencies]
-autoflake = "2.2.0"
-black = "^24.3.0"
-coverage = "^7.2.4"
-flake8 = "7.0.0"
-isort = "^5.10.1"
-mypy = "^1.0.0"
-mypy-extensions = "^1.0.0"
+[tool.ruff.lint]
+ignore = ["E203", "E501", "E701", "F822", "F403", "F405"]
+exclude = ["__init__.py"]
+
+[tool.uv.build-backend]
+module-name = "supra_sdk"
+module-root = ""
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.15,<0.9.0"]
+build-backend = "uv_build"
+
+[dependency-groups]
+dev = ["ruff>=0.12.12"]
