--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,4 +78,7 @@ dev = [
     "coverage>=7.10.6",
     "pip>=25.2",
     "ruff>=0.13.0",
+    "sphinx>=8.2.3",
+    "sphinx-autodoc-typehints>=3.2.0",
+    "sphinx-rtd-theme>=3.0.2",
 ]
